[gd_scene load_steps=6 format=3 uid="uid://x7puhedievgp"]

[ext_resource type="Script" uid="uid://b8brftys1ftjh" path="res://scenes/map/province_node.gd" id="1_ioyrh"]
[ext_resource type="Texture2D" uid="uid://bkiokvdc74g3r" path="res://assets/map_banner_small.png" id="2_tttds"]
[ext_resource type="FontFile" uid="uid://cir166is3xy5i" path="res://fonts/PixelFonts/Superwhite.fnt" id="3_tttds"]

[sub_resource type="LabelSettings" id="LabelSettings_ioyrh"]
font = ExtResource("3_tttds")
font_size = 19
font_color = Color(0.685502, 0.991963, 0.698611, 1)
shadow_size = 0
shadow_color = Color(0.065, 0.065, 0.065, 0.3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bqirx"]
size = Vector2(190.5, 76)

[node name="ProvinceNode" type="Node2D"]
script = ExtResource("1_ioyrh")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -100.0
offset_top = -37.0
offset_right = 100.0
offset_bottom = 43.0
mouse_filter = 2
color = Color(0.067, 0.212, 0.082, 1)

[node name="ProvincePolygon" type="Polygon2D" parent="."]
unique_name_in_owner = true
color = Color(0.284, 0.734, 0.337, 0.235)

[node name="BannerRect" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = -100.0
offset_top = -37.0
offset_right = 100.0
offset_bottom = 40.0
texture = ExtResource("2_tttds")
expand_mode = 2

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -81.0
offset_top = -28.0
offset_right = 81.0
offset_bottom = 28.0
text = "Test"
label_settings = SubResource("LabelSettings_ioyrh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_bqirx")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
